parser/html/nsHtml5TreeOperation.h
@@ -354,14 +354,6 @@ struct opUpdateStyleSheet {
   };
 };
 
-struct opProcessMeta {
-  nsIContent** mElement;
-
-  explicit opProcessMeta(nsIContentHandle* aElement) {
-    mElement = static_cast<nsIContent**>(aElement);
-  };
-};
-
 struct opProcessOfflineManifest {
   char16_t* mUrl;
 
@@ -499,7 +491,7 @@ typedef mozilla::Variant<
     // Gecko-specific on-pop ops
     opMarkAsBroken, opRunScript, opRunScriptAsyncDefer,
     opPreventScriptExecution, opDoneAddingChildren, opDoneCreatingElement,
-    opSetDocumentCharset, opCharsetSwitchTo, opUpdateStyleSheet, opProcessMeta,
+    opSetDocumentCharset, opCharsetSwitchTo, opUpdateStyleSheet,
     opProcessOfflineManifest, opMarkMalformedIfScript, opStreamEnded,
     opSetStyleLineNumber, opSetScriptLineNumberAndFreeze, opSvgLoad,
     opMaybeComplainAboutCharset, opMaybeComplainAboutDeepTree, opAddClass,
